--- a/readme
+++ b/readme
@@ -1,18 +1,23 @@
 Project Homepage:
-https://github.com/bytemine/webbapp-privacyidea
+https://github.com/bytemine/webapp-privacyidea
+
 
 Zarafa Project site:
+
 
 
 Code Repository:
 https://github.com/bytemine/webapp-privacyidea
 
+
 Dependencies:
 php5-ldap, php5-radius
 
+
 Installation:
 Clone this repository into the plugin directory of the WebApp. The directory has to be named 'privacyidea'.
-Add the following to your php.ini: fileextension=radius.so
+Add the following to your php.ini: extension=radius.so
+
 
 Release notes:
 
